--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^3.4.9
   fluttertoast: ^8.0.9
   firebase_phone_auth_handler: ^1.0.6
+  firebase_database: ^9.1.7
 
 dev_dependencies:
   flutter_test:
