upload image feature added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,13 @@ dependencies:
   firebase_core: ^1.23.0
   firebase_auth: ^3.10.0
   get: ^4.6.5
+
   cloud_firestore: ^3.4.9
   fluttertoast: ^8.0.9
   firebase_phone_auth_handler: ^1.0.6
   firebase_database: ^9.1.7
   image_picker: ^0.8.6
+  firebase_storage: ^10.3.11
 
 dev_dependencies:
   flutter_test:
